--- a/src/app/root/root.component.css
+++ b/src/app/root/root.component.css
@@ -9,7 +9,7 @@
 }
 
 .home-header {
-  color: white;
+  color: black;
   padding-top: 12px;
   display: flex;
   justify-content: center;
@@ -22,6 +22,11 @@
   cursor: pointer;
   border-radius: 8px;
   font-weight: bold;
+}
+
+.logout-button {
+  width: 50px;
+  height: 24px;
 }
 
 .buttons:hover {
