--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -40,7 +40,8 @@
     <button (click)="goToConsult()" class="buttons add-button">
       Adicionar Consulta
     </button>
-    <button (click)="backHome()" class="buttons">Listar Consultas</button>
+    <button class="buttons add-button">Listar Consultas</button>
+    <button (click)="backHome()" class="buttons">Voltar</button>
 
     <router-outlet *ngIf="hide"></router-outlet>
 
