--- a/src/app/exames/exames.component.html
+++ b/src/app/exames/exames.component.html
@@ -17,10 +17,12 @@
 <h3 *ngIf="selectedMedico">Médico selecionado: {{ selectedMedico }}</h3>
 
 <select *ngIf="selectedMedico" [(ngModel)]="selectedHorario">
-<option value="">Selecione um horário</option>
-<option *ngFor="let horario of horarios" [value]="horario">
-  {{ horario }}
-</option>
+  <option value="">Selecione um horário</option>
+  <option *ngFor="let horario of horarios" [value]="horario">
+    {{ horario }}
+  </option>
 </select>
 
 <h3 *ngIf="selectedHorario">Horário selecionado: {{ selectedHorario }}</h3>
+
+<button *ngIf="selectedHorario" (click)="agendar()">Agendar</button>
