--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -44,5 +44,34 @@
       Listar Consultas
     </button>
     <button (click)="backHome()" class="buttons">Voltar</button>
+
+    <router-outlet *ngIf="hide"></router-outlet>
+
+    <div *ngIf="!hide">
+      <hr />
+      <div>Name:</div>
+      <div><input [(ngModel)]="formNewName" /></div>
+      <div>Age:</div>
+      <div><input type="number" [(ngModel)]="formNewAge" /></div>
+      <br />
+      <button (click)="addItem()">Adicionar</button>
+      <hr />
+      <table border="1">
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Email</th>
+          <th>Commmand</th>
+        </tr>
+        <tr *ngFor="let item of list | async">
+          <td [title]="['chave: ' + item.key]">{{ item.name }}</td>
+          <td>{{ item.age }}</td>
+          <td>{{ item.email }}</td>
+          <td>
+            <button (click)="deleteItem(item.key)">Remove</button>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
