--- a/src/app/exames/exames.component.css
+++ b/src/app/exames/exames.component.css
@@ -1,3 +1,42 @@
 button {
   background: none;
+  border-radius: 4px;
+}
+button:hover {
+  color: #085f63;
+  background-color: white;
+}
+h1 {
+  text-align: center;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+}
+
+table {
+  border-collapse: collapse;
+  margin: auto;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: center;
+  width: 120px;
+}
+
+th {
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #dcebe6;
+}
+
+tr:hover:nth-child(1n + 2) {
+  background-color: #085f63;
+  color: #fff;
 }
