--- a/src/app/root/root.component.css
+++ b/src/app/root/root.component.css
@@ -5,7 +5,8 @@
 
 .home-container {
   background: #add8e6;
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
 }
 
 .home-header {
@@ -40,4 +41,56 @@
 
 .google:hover {
   background: linear-gradient(145deg, #4285f4, #34a853, #fbbc05, #ea4335);
+}
+
+.sign-in-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.login-inputs {
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid #607a83;
+}
+
+.login-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.container-login {
+  width: 360px;
+  margin: auto;
+}
+
+.container-margin {
+  margin-top: 12px;
+}
+
+label.container-margin {
+  font-weight: bold;
+}
+
+legend {
+  text-align: center;
+  font-size: 24px;
+  color: #000000;
+  font-weight: bold;
+}
+
+hr {
+  height: 2px;
+}
+
+.hr-bar {
+  height: 2px;
+  margin-top: 32px;
+}
+
+.fieldset-box {
+  padding: 16px;
+  border-top-right-radius: 16px;
+  border-top-left-radius: 16px;
+  border: 2px solid #93929291;
 }
