--- a/src/app/exames/exames.component.css
+++ b/src/app/exames/exames.component.css
@@ -40,3 +40,24 @@ tr:hover:nth-child(1n + 2) {
   background-color: #085f63;
   color: #fff;
 }
+
+.exames-select {
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid #607a83;
+  width: 215px;
+}
+
+.agendar-btn {
+  height: 32px;
+  width: 150px;
+  cursor: pointer;
+  border-radius: 8px;
+  font-weight: bold;
+  background: white;
+}
+
+.agendar-btn:hover {
+  color: white;
+  background: black;
+}
