--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -47,7 +47,7 @@
     {{ auth.error }}
   </div>
 
-  <div *ngIf="auth.user">
+  <div style="padding: 24px;" *ngIf="auth.user">
     Bem vindo, logado como: <b>{{ auth.user.email }}</b> |
     <button class="logout-button buttons" (click)="auth.signOut()">Sair</button>
     <hr />
@@ -63,32 +63,5 @@
     <button (click)="backHome()" class="buttons">Voltar</button>
 
     <router-outlet *ngIf="hide"></router-outlet>
-
-    <div *ngIf="!hide">
-      <hr />
-      <div>Name:</div>
-      <div><input [(ngModel)]="formNewName" /></div>
-      <div>Age:</div>
-      <div><input type="number" [(ngModel)]="formNewAge" /></div>
-      <br />
-      <button (click)="addItem()">Adicionar</button>
-      <hr />
-      <table border="1">
-        <tr>
-          <th>Name</th>
-          <th>Age</th>
-          <th>Email</th>
-          <th>Commmand</th>
-        </tr>
-        <tr *ngFor="let item of list | async">
-          <td [title]="['chave: ' + item.key]">{{ item.name }}</td>
-          <td>{{ item.age }}</td>
-          <td>{{ item.email }}</td>
-          <td>
-            <button (click)="deleteItem(item.key)">Remove</button>
-          </td>
-        </tr>
-      </table>
-    </div>
   </div>
 </div>
