--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <header class="home-header">
-    <h1>Consulta Tracker</h1>
+    <h1>Consulta Tracker v1</h1>
   </header>
 
   <div class="container-login" *ngIf="!auth.user">
