2 files modified, 3 added

--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -38,6 +38,8 @@
           <button class="buttons google" (click)="auth.googleSignin()">
             Login with Google
           </button>
+          <span style="font-size: x-large;">|</span>
+          <button class="buttons">Cadastro</button>
         </div>
       </fieldset>
     </form>
