--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,3 +1,19 @@
-<div id="Titulo-Cadastro">
-  <h1>Realize seu cadastro</h1>
-</div>
+<h2>Cadastro</h2>
+<button (click)="backToHome()">Voltar</button>
+<form (ngSubmit)="register()">
+  <div>
+    <label for="email">Email:</label>
+    <input type="email" id="email" [(ngModel)]="email" name="email" required />
+  </div>
+  <div>
+    <label for="senha">Senha:</label>
+    <input
+      type="password"
+      id="senha"
+      [(ngModel)]="senha"
+      name="senha"
+      required
+    />
+  </div>
+  <button type="submit">Cadastrar</button>
+</form>
