--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <h1>Faça seu cadastro</h1>
+  <h1>Realize seu cadastro</h1>
   <form class="form" (ngSubmit)="register()">
     <fieldset>
-      <legend>Registro para consultas</legend>
+      <legend>Registra-se </legend>
       <hr />
       <div class="inputs">
         <label for="email">Email:</label>
